--- a/studio/package.json
+++ b/studio/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
-  "name": "Aoe2Leaderboard-studio",
+  "name": "mtg-league-leaderboard",
   "version": "1.0.0",
   "main": "package.json",
-  "author": "Sanity <hello@sanity.io>",
+  "author": "Scott Taylor",
   "scripts": {
     "dev": "sanity start",
     "format": "prettier-eslint --write \"**/*.js\" \"!node_modules/**\"",
@@ -13,15 +13,15 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^0.x",
-    "@sanity/cli": "^0.x",
-    "@sanity/components": "^0.x",
-    "@sanity/code-input": "^0.x",
-    "@sanity/core": "^0.x",
-    "@sanity/dashboard": "^0.x",
-    "@sanity/default-layout": "^0.x",
-    "@sanity/default-login": "^0.x",
-    "@sanity/desk-tool": "^0.x",
+    "@sanity/base": "^0.140.30",
+    "@sanity/cli": "^0.140.30",
+    "@sanity/components": "^0.140.30",
+    "@sanity/code-input": "^0.140.12",
+    "@sanity/core": "^0.140.30",
+    "@sanity/dashboard": "^0.140.30",
+    "@sanity/default-layout": "^0.140.30",
+    "@sanity/default-login": "^0.140.15",
+    "@sanity/desk-tool": "^0.140.30",
     "date-fns": "^1.30.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
