--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "Aoe2Leaderboard-web",
+  "name": "sanity-sapper-blog-web",
   "description": "Sapper frontend",
   "version": "0.0.1",
   "scripts": {
