--- a/studio/package.json
+++ b/studio/package.json
@@ -10,19 +10,22 @@
     "build": "sanity build",
     "graphql-deploy": "sanity graphql deploy --playground",
     "lint": "eslint .",
-    "test": "sanity check"
+    "test": "sanity check",
+    "start:lambda": "netlify-lambda serve functions",
+    "build:lambda": "netlify-lambda build functions"
   },
   "dependencies": {
     "@sanity/base": "^0.142.6",
     "@sanity/cli": "^0.142.7",
-    "@sanity/components": "^0.142.6",
     "@sanity/code-input": "^0.142.6",
+    "@sanity/components": "^0.142.6",
     "@sanity/core": "^0.142.6",
     "@sanity/dashboard": "^0.142.6",
     "@sanity/default-layout": "^0.142.7",
     "@sanity/default-login": "^0.142.6",
     "@sanity/desk-tool": "^0.142.7",
     "date-fns": "^1.30.1",
+    "netlify-lambda": "^1.6.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
