Changed package name for studio, added another console log to check id map

--- a/studio/package.json
+++ b/studio/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "mtg-league-leaderboard",
+  "name": "aoe2leaderboard",
   "version": "1.0.0",
   "main": "package.json",
   "author": "Scott Taylor",
