--- a/studio/package.json
+++ b/studio/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@sanity/base": "^0.142.6",
     "@sanity/cli": "^0.142.7",
+    "@sanity/client": "^0.147.3",
     "@sanity/code-input": "^0.142.6",
     "@sanity/components": "^0.142.6",
     "@sanity/core": "^0.142.6",
@@ -23,6 +24,7 @@
     "@sanity/default-login": "^0.142.6",
     "@sanity/desk-tool": "^0.142.7",
     "date-fns": "^1.30.1",
+    "eslint-config-airbnb": "^18.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -35,6 +37,7 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
     "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^9.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
