--- a/studio/package.json
+++ b/studio/package.json
@@ -23,6 +23,7 @@
     "@sanity/default-layout": "^0.142.7",
     "@sanity/default-login": "^0.142.6",
     "@sanity/desk-tool": "^0.142.7",
+    "@sanity/vision": "^0.147.6",
     "date-fns": "^1.30.1",
     "eslint-config-airbnb": "^18.0.1",
     "prop-types": "^15.7.2",
